--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "forever": "^1.0.0",
     "helmet": "^3.21.2",
     "mongodb": "^3.4.1",
+    "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   },
