--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "start": "nodemon scraper.js",
     "forever": "forever start scraper.js --uid 'apartmentscraper'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests --recursive"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "forever": "^1.0.0",
+    "forever": "^2.0.0",
     "helmet": "^3.21.2",
+    "mocha": "^7.1.1",
     "mongodb": "^3.4.1",
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
@@ -30,6 +32,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^2.0.2"
   }
 }
